--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,29 @@
 <h1>Make your form here</h1>
+
+<form action="/pirates" method="POST">
+  <h3>Pirate</h3>
+  <label for="pirate_name">Name:</label>
+  <input type="text" name="pirate[name]" id="pirate_name"/>
+  <label for="pirate_weight">Weight:</label>
+  <input type="text" name="pirate[weight]" id="pirate_weight"/>
+  <label for="pirate_height">Height:</label>
+  <input type="text" name="pirate[height]" id="pirate_height"/>
+
+  <h3>Ship 1</h3>
+  <label for="ship_name_1">Name:</label>
+  <input type="text" name="pirate[ships][][name]" id="ship_name_1"/>
+  <label for="ship_type_1">Type:</label>
+  <input type="text" name="pirate[ships][][type]" id="ship_type_1"/>
+  <label for="ship_booty_1">Booty:</label>
+  <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"/>
+
+  <h3>Ship 2</h3>
+  <label for="ship_name_2">Name:</label>
+  <input type="text" name="pirate[ships][][name]" id="ship_name_2"/>
+  <label for="ship_type_2">Type:</label>
+  <input type="text" name="pirate[ships][][type]" id="ship_type_2"/>
+  <label for="ship_booty_2">Booty:</label>
+  <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"/>
+
+  <input type="submit" value="Submit"/>
+</form>
